[package]
name = "wasm_json_sort"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }


[lib]
crate-type = ["cdylib", "rlib"]
